salesforce-main/src/main/default/objects/Application_wizard__c/fields/Intend_to_apply_for_Student_Via__c.field-meta.xml
<CustomField>
    <fullName>Intend_to_apply_for_Student_Via__c</fullName>
    <label>Intend to apply for Student Visa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>