salesforce-main/src/main/default/objects/Application_wizard__c/fields/Internal_Tracking_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Tracking_Status__c</fullName>
    <label>Internal Tracking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>In-Active</fullName>
            </value>
            <value>
                <fullName>User Deleted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>