salesforce-main/src/main/default/objects/Application_wizard__c/fields/is_english_your_first_language__c.field-meta.xml
<CustomField>
    <fullName>is_english_your_first_language__c</fullName>
    <label>is english your first language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>