salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_address_line2__c.field-meta.xml
<CustomField>
    <fullName>kin_address_line2__c</fullName>
    <label>kin address line2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>