salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_address_line3__c.field-meta.xml
<CustomField>
    <fullName>kin_address_line3__c</fullName>
    <label>kin address line3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>