salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_city__c.field-meta.xml
<CustomField>
    <fullName>kin_city__c</fullName>
    <label>kin city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>