salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_contact_telephone__c.field-meta.xml
<CustomField>
    <fullName>kin_contact_telephone__c</fullName>
    <label>kin contact telephone</label>
    <type>Phone</type>
</CustomField>