salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_country__c.field-meta.xml
<CustomField>
    <fullName>kin_country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>kin country</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Application wizards (kin country)</relationshipLabel>
    <relationshipName>Application_wizards5</relationshipName>
    <type>Lookup</type>
</CustomField>