salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_email__c.field-meta.xml
<CustomField>
    <fullName>kin_email__c</fullName>
    <label>kin email</label>
    <type>Email</type>
</CustomField>