salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_name__c.field-meta.xml
<CustomField>
    <fullName>kin_name__c</fullName>
    <label>kin name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>