salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_postcode__c.field-meta.xml
<CustomField>
    <fullName>kin_postcode__c</fullName>
    <label>kin postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>