salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_region__c.field-meta.xml
<CustomField>
    <fullName>kin_region__c</fullName>
    <label>kin region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>