salesforce-main/src/main/default/objects/Application_wizard__c/fields/kin_State_Province__c.field-meta.xml
<CustomField>
    <fullName>kin_State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Changing kin region to state province look up field.</description>
    <label>kin State/Province</label>
    <referenceTo>State_Province__c</referenceTo>
    <relationshipLabel>Application wizards (kin State/Province)</relationshipLabel>
    <relationshipName>Application_wizards1</relationshipName>
    <type>Lookup</type>
</CustomField>