salesforce-main/src/main/default/objects/Application_wizard__c/fields/Language_Section_Complete__c.field-meta.xml
<CustomField>
    <fullName>Language_Section_Complete__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Language Section Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>