salesforce-main/src/main/default/objects/Application_wizard__c/fields/last_Name__c.field-meta.xml
<CustomField>
    <fullName>last_Name__c</fullName>
    <description>this is the family name of the applicant</description>
    <label>Surname/Family Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>