salesforce-main/src/main/default/objects/Application_wizard__c/fields/Learning_Requirement_Details__c.field-meta.xml
<CustomField>
    <fullName>Learning_Requirement_Details__c</fullName>
    <label>Learning Requirement Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>