salesforce-main/src/main/default/objects/Application_wizard__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Campus__c</referenceTo>
    <relationshipLabel>Application wizards</relationshipLabel>
    <relationshipName>Application_wizards</relationshipName>
    <type>Lookup</type>
</CustomField>