salesforce-main/src/main/default/objects/Application_wizard__c/fields/Marketing_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Opt Out</label>
    <type>Checkbox</type>
</CustomField>