salesforce-main/src/main/default/objects/Application_wizard__c/fields/Minimum_1_Year_Post_Education__c.field-meta.xml
<CustomField>
    <fullName>Minimum_1_Year_Post_Education__c</fullName>
    <label>Minimum 1 Year Post Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>