salesforce-main/src/main/default/objects/Application_wizard__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode</label>
    <referenceTo>Mode__c</referenceTo>
    <relationshipLabel>Application wizards</relationshipLabel>
    <relationshipName>Application_wizards</relationshipName>
    <type>Lookup</type>
</CustomField>