salesforce-main/src/main/default/objects/Application_wizard__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <description>For ACCA courses</description>
    <label>Modules</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCA - Knowledge - F1</fullName>
            </value>
            <value>
                <fullName>ACCA - Knowledge - F2</fullName>
            </value>
            <value>
                <fullName>ACCA - Knowledge - F3</fullName>
            </value>
            <value>
                <fullName>ACCA - Skills - F4</fullName>
            </value>
            <value>
                <fullName>ACCA - Skills - F5</fullName>
            </value>
            <value>
                <fullName>ACCA - Skills - F6</fullName>
            </value>
            <value>
                <fullName>ACCA - Skills - F7</fullName>
            </value>
            <value>
                <fullName>ACCA - Skills - F8</fullName>
            </value>
            <value>
                <fullName>ACCA - Skills - F9</fullName>
            </value>
            <value>
                <fullName>ACCA - Essentials - P1</fullName>
            </value>
            <value>
                <fullName>ACCA - Essentials - P2</fullName>
            </value>
            <value>
                <fullName>ACCA - Essentials - P3</fullName>
            </value>
            <value>
                <fullName>ACCA - Options - P4</fullName>
            </value>
            <value>
                <fullName>ACCA - Options - P5</fullName>
            </value>
            <value>
                <fullName>ACCA - Options - P6</fullName>
            </value>
            <value>
                <fullName>ACCA - Options - P7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>