salesforce-main/src/main/default/objects/Application_wizard__c/fields/month__c.field-meta.xml
<CustomField>
    <fullName>month__c</fullName>
    <label>month</label>
    <length>50</length>
    <type>Text</type>
</CustomField>