salesforce-main/src/main/default/objects/Application_wizard__c/fields/Monthly_expense_in_UK__c.field-meta.xml
<CustomField>
    <fullName>Monthly_expense_in_UK__c</fullName>
    <label>Monthly expense in UK</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>