salesforce-main/src/main/default/objects/Application_wizard__c/fields/Most_recent_course_studied_in_UK__c.field-meta.xml
<CustomField>
    <fullName>Most_recent_course_studied_in_UK__c</fullName>
    <label>Most recent course studied in UK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>