salesforce-main/src/main/default/objects/Application_wizard__c/fields/mother_occupation__c.field-meta.xml
<CustomField>
    <fullName>mother_occupation__c</fullName>
    <label>mother occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>