salesforce-main/src/main/default/objects/Application_wizard__c/fields/Name_of_organisation__c.field-meta.xml
<CustomField>
    <fullName>Name_of_organisation__c</fullName>
    <label>Name of organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>