salesforce-main/src/main/default/objects/Application_wizard__c/fields/Names_as_per_passport__c.field-meta.xml
<CustomField>
    <fullName>Names_as_per_passport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Names as per passport</label>
    <type>Checkbox</type>
</CustomField>