salesforce-main/src/main/default/objects/Application_wizard__c/fields/Nationality__c.field-meta.xml
<CustomField>
    <fullName>Nationality__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nationality</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Application wizards (Nationality)</relationshipLabel>
    <relationshipName>Application_wizards4</relationshipName>
    <type>Lookup</type>
</CustomField>