salesforce-main/src/main/default/objects/Application_wizard__c/fields/Nationality_section_complete__c.field-meta.xml
<CustomField>
    <fullName>Nationality_section_complete__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Nationality section complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>