salesforce-main/src/main/default/objects/Application_wizard__c/fields/New_App_User_Request__c.field-meta.xml
<CustomField>
    <fullName>New_App_User_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To send email only to new User not to users who create new app.</description>
    <label>New App User Request</label>
    <type>Checkbox</type>
</CustomField>