salesforce-main/src/main/default/objects/Application_wizard__c/fields/next_of_kin_section_complete__c.field-meta.xml
<CustomField>
    <fullName>next_of_kin_section_complete__c</fullName>
    <label>next of kin section complete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>