salesforce-main/src/main/default/objects/Application_wizard__c/fields/Number_of_family_members__c.field-meta.xml
<CustomField>
    <fullName>Number_of_family_members__c</fullName>
    <label>Number of family members</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>