salesforce-main/src/main/default/objects/Application_wizard__c/fields/Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Details__c</fullName>
    <label>Other Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>