salesforce-main/src/main/default/objects/Application_wizard__c/fields/P1__c.field-meta.xml
<CustomField>
    <fullName>P1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P1</label>
    <type>Checkbox</type>
</CustomField>