salesforce-main/src/main/default/objects/Application_wizard__c/fields/P2__c.field-meta.xml
<CustomField>
    <fullName>P2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P2</label>
    <type>Checkbox</type>
</CustomField>