salesforce-main/src/main/default/objects/Application_wizard__c/fields/P3__c.field-meta.xml
<CustomField>
    <fullName>P3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P3</label>
    <type>Checkbox</type>
</CustomField>