salesforce-main/src/main/default/objects/Application_wizard__c/fields/Passport_Copy_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Passport_Copy_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passport Copy Uploaded</label>
    <type>Checkbox</type>
</CustomField>