salesforce-main/src/main/default/objects/Application_wizard__c/fields/Passport_date_expected__c.field-meta.xml
<CustomField>
    <fullName>Passport_date_expected__c</fullName>
    <label>Passport date expected</label>
    <type>Date</type>
</CustomField>