salesforce-main/src/main/default/objects/Application_wizard__c/fields/Passport_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Passport_File_Name__c</fullName>
    <label>Passport File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>