salesforce-main/src/main/default/objects/Application_wizard__c/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>