salesforce-main/src/main/default/objects/Application_wizard__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>this has a password</description>
    <label>Password</label>
    <length>16</length>
    <type>Text</type>
</CustomField>