salesforce-main/src/main/default/objects/Application_wizard__c/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>