salesforce-main/src/main/default/objects/Application_wizard__c/fields/Person_Authorizing_Sponsorship__c.field-meta.xml
<CustomField>
    <fullName>Person_Authorizing_Sponsorship__c</fullName>
    <label>Person Authorizing Sponsorship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>