salesforce-main/src/main/default/objects/Application_wizard__c/fields/Personal_Details_Complete__c.field-meta.xml
<CustomField>
    <fullName>Personal_Details_Complete__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Personal Details Complete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>