salesforce-main/src/main/default/objects/Application_wizard__c/fields/personal_statement__c.field-meta.xml
<CustomField>
    <fullName>personal_statement__c</fullName>
    <label>personal statement</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>