salesforce-main/src/main/default/objects/Application_wizard__c/fields/Planning_to_stay_with_relatives_in_uk__c.field-meta.xml
<CustomField>
    <fullName>Planning_to_stay_with_relatives_in_uk__c</fullName>
    <label>Planning to stay with relatives in uk</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>