salesforce-main/src/main/default/objects/Application_wizard__c/fields/post_mrkting__c.field-meta.xml
<CustomField>
    <fullName>post_mrkting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>post mrkting</label>
    <type>Checkbox</type>
</CustomField>