salesforce-main/src/main/default/objects/Application_wizard__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>correspondence postal code</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>