salesforce-main/src/main/default/objects/Application_wizard__c/fields/Preferred_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Telephone__c</fullName>
    <label>Preferred Telephone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>