salesforce-main/src/main/default/objects/Application_wizard__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>programme id  selected by the user</description>
    <label>Programme</label>
    <referenceTo>Programme__c</referenceTo>
    <relationshipLabel>Programme</relationshipLabel>
    <relationshipName>Application_programme</relationshipName>
    <type>Lookup</type>
</CustomField>