salesforce-main/src/main/default/objects/Application_wizard__c/fields/Provence_State__c.field-meta.xml
<CustomField>
    <fullName>Provence_State__c</fullName>
    <description>regional provence</description>
    <label>Provence/State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>