salesforce-main/src/main/default/objects/Application_wizard__c/fields/Purchase_order_Number_where_necessary__c.field-meta.xml
<CustomField>
    <fullName>Purchase_order_Number_where_necessary__c</fullName>
    <label>Purchase order Number (where necessary)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>