salesforce-main/src/main/default/objects/Application_wizard__c/fields/ready_for_extract__c.field-meta.xml
<CustomField>
    <fullName>ready_for_extract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ready for extract</label>
    <type>Checkbox</type>
</CustomField>