salesforce-main/src/main/default/objects/Application_wizard__c/fields/References_date_expected__c.field-meta.xml
<CustomField>
    <fullName>References_date_expected__c</fullName>
    <label>References date expected</label>
    <type>Date</type>
</CustomField>