salesforce-main/src/main/default/objects/Application_wizard__c/fields/References_File_Name__c.field-meta.xml
<CustomField>
    <fullName>References_File_Name__c</fullName>
    <label>References File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>