salesforce-main/src/main/default/objects/Application_wizard__c/fields/References_uploaded__c.field-meta.xml
<CustomField>
    <fullName>References_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>References uploaded</label>
    <type>Checkbox</type>
</CustomField>