salesforce-main/src/main/default/objects/Application_wizard__c/fields/relatives_contact_details_in_UK__c.field-meta.xml
<CustomField>
    <fullName>relatives_contact_details_in_UK__c</fullName>
    <label>relatives contact details in UK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>