salesforce-main/src/main/default/objects/Application_wizard__c/fields/Request_Password__c.field-meta.xml
<CustomField>
    <fullName>Request_Password__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For sending forgot password email</description>
    <label>Request Password</label>
    <type>Checkbox</type>
</CustomField>