salesforce-main/src/main/default/objects/Application_wizard__c/fields/Security_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Security_Expiry_Date__c</fullName>
    <label>Security Expiry Date</label>
    <type>DateTime</type>
</CustomField>