salesforce-main/src/main/default/objects/Application_wizard__c/fields/Security_Token__c.field-meta.xml
<CustomField>
    <fullName>Security_Token__c</fullName>
    <label>Security Token</label>
    <length>15</length>
    <type>Text</type>
</CustomField>