salesforce-main/src/main/default/objects/Application_wizard__c/fields/Similar_course_in_other_country__c.field-meta.xml
<CustomField>
    <fullName>Similar_course_in_other_country__c</fullName>
    <label>Similar course in other country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>