salesforce-main/src/main/default/objects/Application_wizard__c/fields/sms_mrkting__c.field-meta.xml
<CustomField>
    <fullName>sms_mrkting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sms mrkting</label>
    <type>Checkbox</type>
</CustomField>