salesforce-main/src/main/default/objects/Application_wizard__c/fields/Sponsor_Company__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Company__c</fullName>
    <label>Sponsor Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>