salesforce-main/src/main/default/objects/Application_wizard__c/fields/Sponsor_PO__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_PO__c</fullName>
    <label>Sponsor PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>