salesforce-main/src/main/default/objects/Application_wizard__c/fields/Sponsor_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Street_Address__c</fullName>
    <label>Sponsor Street Address</label>
    <type>TextArea</type>
</CustomField>