salesforce-main/src/main/default/objects/Application_wizard__c/fields/sponsorCity__c.field-meta.xml
<CustomField>
    <fullName>sponsorCity__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>