salesforce-main/src/main/default/objects/Application_wizard__c/fields/sponsorCountry__c.field-meta.xml
<CustomField>
    <fullName>sponsorCountry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>country</label>
    <referenceTo>country_list__c</referenceTo>
    <relationshipLabel>Application wizards (country)</relationshipLabel>
    <relationshipName>Application_wizards1</relationshipName>
    <type>Lookup</type>
</CustomField>