salesforce-main/src/main/default/objects/Application_wizard__c/fields/sponsorEmail__c.field-meta.xml
<CustomField>
    <fullName>sponsorEmail__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>