salesforce-main/src/main/default/objects/Application_wizard__c/fields/sponsorPostal_Code__c.field-meta.xml
<CustomField>
    <fullName>sponsorPostal_Code__c</fullName>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>