salesforce-main/src/main/default/objects/Application_wizard__c/fields/sponsorTelephone__c.field-meta.xml
<CustomField>
    <fullName>sponsorTelephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>