salesforce-main/src/main/default/objects/Application_wizard__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Changed from text to Look up.</description>
    <label>State/Province</label>
    <referenceTo>State_Province__c</referenceTo>
    <relationshipLabel>Application wizards</relationshipLabel>
    <relationshipName>Application_wizards</relationshipName>
    <type>Lookup</type>
</CustomField>