salesforce-main/src/main/default/objects/Application_wizard__c/fields/staying_in_UK_after_course__c.field-meta.xml
<CustomField>
    <fullName>staying_in_UK_after_course__c</fullName>
    <label>Staying in UK After Course</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>