salesforce-main/src/main/default/objects/Application_wizard__c/fields/Submit_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>Submit_Application_Date__c</fullName>
    <label>Submit Application Date</label>
    <type>Date</type>
</CustomField>