salesforce-main/src/main/default/objects/Application_wizard__c/fields/telephone__c.field-meta.xml
<CustomField>
    <fullName>telephone__c</fullName>
    <description>applicant telephone</description>
    <label>Main contact telephone</label>
    <type>Phone</type>
</CustomField>