salesforce-main/src/main/default/objects/Application_wizard__c/fields/telephone_mrkting__c.field-meta.xml
<CustomField>
    <fullName>telephone_mrkting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>telephone mrkting</label>
    <type>Checkbox</type>
</CustomField>