salesforce-main/src/main/default/objects/Application_wizard__c/fields/Type_of_Visa_intend_to_apply__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Visa_intend_to_apply__c</fullName>
    <label>Type of Visa intend to apply</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>