salesforce-main/src/main/default/objects/Application_wizard__c/fields/UK_Visa_History_date_expected__c.field-meta.xml
<CustomField>
    <fullName>UK_Visa_History_date_expected__c</fullName>
    <label>UK Visa History date expected</label>
    <type>Date</type>
</CustomField>