salesforce-main/src/main/default/objects/Application_wizard__c/fields/UK_Visa_History_File_Name__c.field-meta.xml
<CustomField>
    <fullName>UK_Visa_History_File_Name__c</fullName>
    <label>UK Visa History File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>