salesforce-main/src/main/default/objects/Application_wizard__c/fields/UK_Visa_History_uploaded__c.field-meta.xml
<CustomField>
    <fullName>UK_Visa_History_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UK Visa History uploaded</label>
    <type>Checkbox</type>
</CustomField>