salesforce-main/src/main/default/objects/Application_wizard__c/fields/Visa_copy_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Visa_copy_uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa copy uploaded</label>
    <type>Checkbox</type>
</CustomField>