salesforce-main/src/main/default/objects/Application_wizard__c/fields/Visa_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Visa_File_Name__c</fullName>
    <label>Visa File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>