salesforce-main/src/main/default/objects/Application_wizard__c/fields/Visa_Refusal_Copy_File_Name__c.field-meta.xml
<CustomField>
    <fullName>Visa_Refusal_Copy_File_Name__c</fullName>
    <label>Visa Refusal Copy File Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>