salesforce-main/src/main/default/objects/Application_wizard__c/fields/Visa_Refusal_date_expected__c.field-meta.xml
<CustomField>
    <fullName>Visa_Refusal_date_expected__c</fullName>
    <label>Visa Refusal date expected</label>
    <type>Date</type>
</CustomField>