salesforce-main/src/main/default/objects/Application_wizard__c/fields/Web_Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Web_Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Course Offering</label>
    <referenceTo>Web_Course_Offering__c</referenceTo>
    <relationshipLabel>Application wizards</relationshipLabel>
    <relationshipName>Application_wizards</relationshipName>
    <type>Lookup</type>
</CustomField>