salesforce-main/src/main/default/objects/Application_wizard__c/fields/why_did_you_choose_to_study_with_us__c.field-meta.xml
<CustomField>
    <fullName>why_did_you_choose_to_study_with_us__c</fullName>
    <label>why did you choose to study with us</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training Contract or Company Sponsor</fullName>
            </value>
            <value>
                <fullName>Good Brand Reputation</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Course/Mode/Flexibility</fullName>
            </value>
            <value>
                <fullName>Friend/Family/Colleague recommendation</fullName>
            </value>
            <value>
                <fullName>Value for money</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>