salesforce-main/src/main/default/objects/Application_wizard__c/fields/why_UK__c.field-meta.xml
<CustomField>
    <fullName>why_UK__c</fullName>
    <label>Why UK</label>
    <type>TextArea</type>
</CustomField>